[lib]
proc-macro=true

[package]
name = "ee-conio-macro"
version = "0.0.3-alpha"
description="ANSI escape sequence helpers (compile time)"
repository = "https://github.com/ErnieE5/ee-conio"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["ANSI", "terminal"]
categories = ["command-line-utilities"]
include = ["/src", "/examples"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
ee-conio = { path="../ee-conio", version="0.0.3-alpha" }
syn = "2.0"
proc-macro2 = "1.0.106"
rustc-literal-escaper = "0.0.7"

[dev-dependencies]
enterpolation = "0.3.0"
ordered-float = "5.3.0"
palette = "0.7.6"

