[lib]
proc-macro=true

[package]
name = "ee-conio-macro"
version = "0.1.0-alpha.1"
description="ANSI escape sequence helpers (compile time)"
repository = "https://github.com/ErnieE5/ee-conio"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["ANSI", "terminal"]
categories = ["command-line-utilities"]
include = ["/src", "/tests"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
ee-conio-engine = { path="../ee-conio-engine", version="0.1.0-alpha.1" }
syn = "2.0"
proc-macro2 = "1.0.106"
rustc-literal-escaper = "0.0.7"


