[package]
name = "ee-conio"
version = "0.0.3-alpha"
description="ANSI escape sequence helpers (run/compile time)"
repository = "https://github.com/ErnieE5/ee-conio"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["ANSI", "terminal"]
categories = ["command-line-utilities"]
include = ["/src",
"/examples",
"/tests"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
regex = "1.12.3"
regex-macro = "0.3.0"
