[package]
name = "ee-conio"
version = "0.1.0-alpha.1"
description="ANSI escape sequence helpers (run/compile time)"
repository = "https://github.com/ErnieE5/ee-conio"
edition = "2024"
license = "MIT OR Apache-2.0"
keywords = ["ANSI", "terminal"]
categories = ["command-line-utilities"]
include = ["/src","/tests"]

[lints.rust]
unsafe_code = "forbid"

[dependencies]
ee-conio-engine = { path="../ee-conio-engine", version="0.0.1-alpha.1" }
ee-conio-macro  = { path="../ee-conio-macro",  version="0.1.0-alpha.1" }


[dev-dependencies]
enterpolation = "0.3.0"
ordered-float = "5.3.0"
palette = "0.7.6"
